welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: value xor is not a member of Boolean
	if(1==1 xor 0==0){
                ^